--- a/NLP/pom.xml
+++ b/NLP/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>deeplearning4j-vertx</artifactId>
             <version>1.0.0-M1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.uima</groupId>
+            <artifactId>uimaj-core</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
 
     </dependencies>
