--- a/NLP/pom.xml
+++ b/NLP/pom.xml
@@ -32,17 +32,17 @@
             <version>1.0.0-M1.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native</artifactId>
-            <version>1.0.0-M1.1</version>
-        </dependency>
-
 <!--        <dependency>-->
 <!--            <groupId>org.nd4j</groupId>-->
-<!--            <artifactId>nd4j-cuda-11.2-platform</artifactId>-->
+<!--            <artifactId>nd4j-native</artifactId>-->
 <!--            <version>1.0.0-M1.1</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-cuda-11.2-platform</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.bytedeco</groupId>
@@ -97,10 +97,10 @@
 
     <properties>
         <!-- Change the nd4j.backend property to nd4j-cuda-*.*-platform example: nd4j-cuda-11.2-platform to use CUDA GPUs -->
-        <nd4j.backend>nd4j-native-platform</nd4j.backend>
-<!--        <nd4j.backend>nd4j-cuda-11.2-platform</nd4j.backend>-->
+<!--        <nd4j.backend>nd4j-native-platform</nd4j.backend>-->
+        <nd4j.backend>nd4j-cuda-11.2-platform</nd4j.backend>
         <!-- Change the dl4j.cuda.backend property to deeplearning4j-cuda-*.* example: deeplearning4j-cuda-11.2 to use CuDNN -->
-<!--        <dl4j.cuda.backend>deeplearning4j-cuda-11.2</dl4j.cuda.backend>-->
+        <dl4j.cuda.backend>deeplearning4j-cuda-11.2</dl4j.cuda.backend>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <shadedClassifier>bin</shadedClassifier>
 
@@ -181,8 +181,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
 
