--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+NLP/mswiki.vector
+NLP/src/main/resources/Dataset/data.csv
+NLP/target/classes/Dataset/data.csv
+NLP/word2vec.vector
+NLP/word2vec_ms_wiki.vector
+Tweet Streams/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+Tweet Streams/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+Tweet Streams/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
