--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,6 +12,27 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.0.3</vaadin.version>
+        <nd4j.backend>nd4j-cuda-11.2-platform</nd4j.backend>
+        <dl4j.cuda.backend>deeplearning4j-cuda-11.2</dl4j.cuda.backend>
+<!--        <nd4j.backend>nd4j-native-platform</nd4j.backend>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <shadedClassifier>bin</shadedClassifier>
+
+        <java.version>1.8</java.version>
+        <nd4j.version>1.0.0-M1.1</nd4j.version>
+        <dl4j.version>1.0.0-M1.1</dl4j.version>
+        <datavec.version>1.0.0-M1.1</datavec.version>
+
+        <javacv.version>1.5.5</javacv.version>
+        <ffmpeg.version>3.2.1-1.3</ffmpeg.version>
+        <zip4j.version>2.2.6</zip4j.version>
+        <httpclient.version>4.5.12</httpclient.version>
+
+        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
+        <exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
+        <maven.minimum.version>3.3.1</maven.minimum.version>
+
     </properties>
 
     <parent>
@@ -45,6 +66,10 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+<!--        <repository>-->
+<!--            <id>vaadin-addons</id>-->
+<!--            <url>https://maven.vaadin.com/vaadin-addons</url>-->
+<!--        </repository>-->
     </repositories>
 
     <pluginRepositories>
@@ -77,6 +102,16 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.vaadin.addon</groupId>
+            <artifactId>twitter-widgets</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.appreciated</groupId>
+            <artifactId>card</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <!-- Replace artifactId with vaadin-core to use only free components -->
@@ -120,7 +155,70 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.0.3</version>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>flow-html-components</artifactId>
+            <version>23.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nn</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nlp</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-cuda-11.2-platform</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.nd4j</groupId>-->
+<!--            <artifactId>nd4j-native-platform</artifactId>-->
+<!--            <version>1.0.0-M1.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.nd4j</groupId>-->
+<!--            <artifactId>nd4j-native-api</artifactId>-->
+<!--            <version>1.0.0-M1.1</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacpp</artifactId>
+            <version>1.5.7</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-vertx</artifactId>
+            <version>1.0.0-M1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-local</artifactId>
+            <version>1.0.0-M1.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
