--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Tweet Streams/target/maven-status/maven-compiler-plugin/compile/default-compile/
 Tweet Streams/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 Tweet Streams/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 webapp/src/main/resources/Models/word2vec.vector
+webapp/src/main/resources/toppng.com-twitter-logo-1252x1018.png
